# supply-chain-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: security-scan.yml
models/: metadata.json
notebooks/: 01_data_collection.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_model_export.ipynb
notebooks/data/: feature_columns.json
supply_chain_analyzer/: __init__.py  cli.py
supply_chain_analyzer/core/: __init__.py  analyzer.py  config.py  models.py
supply_chain_analyzer/parsers/: __init__.py  base.py  pip_parser.py
supply_chain_analyzer/reporters/: __init__.py  console.py  html_reporter.py  json_reporter.py
supply_chain_analyzer/scanners/: __init__.py  dependency_tree.py  license.py  maturity.py  ml_scorer.py  risk_classifier.py  security_exposure.py  typosquat.py  vulnerability.py
tests/: __init__.py  test_cli.py  test_config.py  test_dependency_tree.py  test_integration.py  test_license.py  test_models.py  test_parsers.py  test_reporters.py  test_reputation.py  test_typosquat.py  test_vulnerability.py
